--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 .form-container{
-    background: #fff;
-    width: 500px;
     margin: auto;
+    background: #fff;
+    width: 400px;
     padding: 30px;
-    box-shadow: 10px 10px 10px 0px #9ba1aa;
+    box-shadow: 10px 10px 10px 10px #202123;
     border-radius: 10px;
     margin-top:20px;
+    margin-bottom: 30px;
 }
+
