--- a/css/profilestyle.css
+++ b/css/profilestyle.css
@@ -33,7 +33,7 @@
 body {
     font-family: "Raleway";
     background-color: #e6e6e6;
-   
+
 }
 
 .card {
@@ -251,4 +251,20 @@ ul ul a {
 	#sidebarCollapse span{
 		display: none;
 	}
+}
+
+.blogpost{
+  obackground-color:#f5f5f5;
+  padding-left:10px;
+  padding-right:10px;
+  padding-top:10px;
+  overflow:hidden
+}
+
+.post{
+  text-align: justify;
+}
+
+.btn-info{
+  float: right;
 }
