--- a/css/profilestyle.css
+++ b/css/profilestyle.css
@@ -254,7 +254,7 @@ ul ul a {
 }
 
 .blogpost{
-  obackground-color:#f5f5f5;
+  background-color:#f5f5f5;
   padding-left:10px;
   padding-right:10px;
   padding-top:10px;
